唤醒ap核运行boot code执行清屏操作

--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -16,6 +16,7 @@ INC :=
 # 包含当前目录的makefile，以及库
 include $(srctree)/scripts/Kbuild.include
 # include $(cfg_mk_file)
+include $(srctree)/.config
 include Makefile
 # include $(inc_file)
 
