--- a/netstack/Makefile
+++ b/netstack/Makefile
@@ -1,7 +1,12 @@
-obj-y := main.o
+obj-y += main.o
+obj-y += utils/
+obj-y += protocol/
+obj-y += thread/
 
-# c-src-y := main.c
 
 header-y := ./
 header-y += libs/include
 header-y += libs/include/pcap
+
+# test code lib
+obj-y += testcode/
